jsonata-native-fn/tests/ui/item-is-not-a-function.rs
use jsonata_native_fn::jsonata;

#[jsonata]
struct S;

fn main() {}
